--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.37.1",
+    "axios": "^1.7.2",
     "evergreen-ui": "^7.1.9",
     "firebase": "^10.12.1",
     "localforage": "^1.10.0",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.23.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert": "^2.1.2",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
